--- a/coc-settings.json
+++ b/coc-settings.json
@@ -11,5 +11,6 @@
   "cSpell.language": "en,es",
   "list.maxHeight": 30,
   "list.autoResize": true,
-  "coc.preferences.currentFunctionSymbolAutoUpdate": true
+  "coc.preferences.currentFunctionSymbolAutoUpdate": true,
+  "cSpell.diagnosticLevel": "Hint"
 }
