--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,10 @@
 {
-  "eslint.filetypes": ["javascript","javascriptreact"],
+  "eslint.filetypes": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
   "eslint.autoFixOnSave": true ,
   "explorer.quitOnOpen": true,
   "explorer.openAction.strategy": "tab",
