--- a/coc-settings.json
+++ b/coc-settings.json
@@ -32,5 +32,8 @@
     "css"
   ],
   "session.saveOnVimLeave": false,
-  "session.directory": "~/.config/nvim/sessions/"
+  "session.directory": "~/.config/nvim/sessions/",
+  "cSpell.userWords": [
+    "Lonighi"
+  ]
 }
