--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,7 +7,7 @@
   ],
   "eslint.autoFixOnSave": true,
   "explorer.quitOnOpen": true,
-  "explorer.openAction.strategy": "tab",
+  "explorer.openAction.strategy": "sourceWindow",
   "explorer.sources": [
     {
       "name": "buffer",
@@ -43,8 +43,5 @@
   ],
   "session.saveOnVimLeave": false,
   "session.directory": "~/.config/nvim/sessions/",
-  "cSpell.userWords": [
-    "Lonighi",
-    "devtool"
-  ]
+  "cSpell.userWords": ["Lonighi", "devtool"]
 }
