--- a/coc-settings.json
+++ b/coc-settings.json
@@ -61,7 +61,11 @@
   ],
   "session.saveOnVimLeave": false,
   "session.directory": "~/.config/nvim/sessions/",
-  "cSpell.userWords": ["Lonighi", "devtool"],
+  "cSpell.userWords": [
+    "Lonighi",
+    "devtool",
+    "stockable"
+  ],
   "snippets.textmateSnippetsRoots": ["~/.config/nvim/snippets"],
   "tsserver.npm": "/home/eduardo/.nvm/versions/node/v14.15.4"
 }
