--- a/coc-settings.json
+++ b/coc-settings.json
@@ -96,5 +96,7 @@
 		"typeParameter": "\uf728",
 		"default": "\uf29c"
 	},
-  "diagnostic.checkCurrentLine": true
+  "diagnostic.checkCurrentLine": true,
+  "diagnostic.virtualText": true,
+  "diagnostic.virtualTextCurrentLineOnly": false
 }
