org-mode literate configs

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -24,6 +24,7 @@
   "eslint.packageManager": "yarn",
   "eslint.alwaysShowStatus": true,
   "explorer.quitOnOpen": true,
+  "explorer.previewAction.onHover": "content",
   "explorer.openAction.strategy": "sourceWindow",
   "explorer.sources": [
     {
