--- a/coc-settings.json
+++ b/coc-settings.json
@@ -26,11 +26,8 @@
   "explorer.quitOnOpen": true,
   "explorer.previewAction.onHover": "content",
   "explorer.openAction.strategy": "sourceWindow",
+  "explorer.file.showHiddenFiles":true,
   "explorer.sources": [
-    {
-      "name": "buffer",
-      "expand": false
-    },
     {
       "name": "file",
       "expand": true
@@ -73,35 +70,35 @@
   "snippets.textmateSnippetsRoots": ["~/.config/nvim/snippets"],
   "tsserver.npm": "/home/eduardo/.nvm/versions/node/v14.15.4",
   "suggest.completionItemKindLabels": {
-		"keyword": "\uf1de",
-		"variable": "\ue79b",
-		"value": "\uf89f",
-		"operator": "\u03a8",
-		"constructor": "\uf0ad",
-		"function": "\u0192",
-		"reference": "\ufa46",
-		"constant": "\uf8fe",
-		"method": "\uf09a",
-		"struct": "\ufb44",
-		"class": "\uf0e8",
-		"interface": "\uf417",
-		"text": "\ue612",
-		"enum": "\uf435",
-		"enumMember": "\uf02b",
-		"module": "\uf40d",
-		"color": "\ue22b",
-		"property": "\ue624",
-		"field": "\uf9be",
-		"unit": "\uf475",
-		"event": "\ufacd",
-		"file": "\uf723",
-		"folder": "\uf114",
-		"snippet": "\ue60b",
-		"typeParameter": "\uf728",
-		"default": "\uf29c"
-	},
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "constructor": "\uf0ad",
+    "function": "\u0192",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
+    "class": "\uf0e8",
+    "interface": "\uf417",
+    "text": "\ue612",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf40d",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\uf9be",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf723",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
+  },
   "diagnostic.checkCurrentLine": true,
-  "diagnostic.virtualText":false,
+  "diagnostic.virtualText": false,
   "diagnostic.virtualTextCurrentLineOnly": false,
   "coc.preferences.enableMessageDialog": true,
   "coc.preferences.enableFloatHighlight": true,
@@ -109,5 +106,5 @@
   "tabnine.priority": 90,
   "todolist.dateFormat": "DD-MM-YY HH:mm",
   "todolist.monitor": true,
-  "coc.source.tag.enable": true,
+  "coc.source.tag.enable": true
 }
