--- a/coc-settings.json
+++ b/coc-settings.json
@@ -87,7 +87,10 @@
   },
   "diagnostic.checkCurrentLine": true,
   "diagnostic.virtualText": false,
+  "diagnostic.virtualTextPrefix": "■ ",
   "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.virtualTextLines": 3,
+  "diagnostic.virtualTextLineSeparator": ">>>>",
   "coc.preferences.enableMessageDialog": true,
   "coc.preferences.enableFloatHighlight": true,
   "codeLens.enable": false,
